--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -2,15 +2,18 @@
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
+# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
+#     for more information on fields/options.
+
 [project]
 name = "{{ cookiecutter.package_name }}"
 readme = "README.md"
 dynamic = ["version"]
 # description = ""
 # keywords = []
-requires-python = ">=3.9,<3.14"
-# license = "BSD-3-Clause"
-# license-files = ["LICENSE"]
+requires-python = ">=3.9,<3.14"  # Should update if after Oct 2025
+# license = ""
+# license-files = [""]
 authors = [
     { name = "{{ cookiecutter.author_name }}" },
     { email = "{{  cookiecutter.author_email }}" },
@@ -31,6 +34,9 @@ version = {attr = "{{ cookiecutter.package_name }}.__version__"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+# [tool.setuptools.package-data]
+# {{ cookiecutter.package_name }} = ["**/*.yaml", "**/*.yml", "**/*.csv"]
 
 [project.optional-dependencies]
 docs = [
@@ -56,7 +62,7 @@ dev = [
     "{{ cookiecutter.package_name }}[docs,tests]",
 ]
 
-[project.urls]
+# [project.urls]
 # Homepage = ""
 # Documentation = ""
 # Repository = ""
