pytest-html with added report

--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -51,7 +51,9 @@ docs = [
 tests = [
     "pytest",
     "pytest-cov",
+    "pytest-html",
     "pytest-xdist",
+    "pytest-slow-last",
 ]
 dev = [
     "nox",
